Adjust VideoRendererAlgorithm for |frame_dropping_disabled_|

This makes video frame hashing in tests immune to timing variations that
are inherent in the rendering algorithm.

BUG=663709
TEST=media_unittests pass, new unit test VideoRendererAlgorithmTest.EffectiveFramesQueuedWithoutFrameDropping

Review-Url: https://codereview.chromium.org/2502093002
Cr-Commit-Position: refs/heads/master@{#434350}

Former-commit-id: e1e43d3da2315557b19009165ea9c8a580d63eda